Image alignment fix on blog

--- a/wp-content/themes/chris-smith/_resources/styles/partials/typography.scss
+++ b/wp-content/themes/chris-smith/_resources/styles/partials/typography.scss
@@ -139,3 +139,7 @@ h3 {
     }
   }
 }
+
+.aligncenter {
+  @apply mx-auto;
+}
